# ComfyUI-Chimera

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  update-check.yml
docs/: CATALOG.md  SETUP.md  STACK.md  UPDATING.md
modules/agent/: README.md  self-correction.md
modules/image/: brand-kits.md
modules/video/: models.md
scripts/: generate.py  update_report.py
scripts/agent/: auto_generate.py  expander.py  judge.py  loop.py  rubric.py
scripts/brandkit/: comfy.py  manifest.py  sidecar.py  updates.py
tests/: test_auto_generate.py  test_comfy.py  test_consensus.py  test_expander.py  test_generate_helpers.py  test_integration.py  test_judge.py  test_rubric.py  test_scaffold.py  test_sidecar.py  test_update_report.py  test_updates.py  test_video.py  test_workflow_zimage.py
workflows/agent/: README.md
